--- a/template/game.html
+++ b/template/game.html
@@ -1,1 +1,81 @@
-<h1>Game's page</h1>
+<section>
+    <article>
+      <input class="filterName" ng-model="filterInput.item_name" placeholder="search"/>
+      <button class="sortButton" id="button" ng-click="sort('item_name')">{{sortName}}</button>
+      <button class="sortButton" id="button" ng-click="sort('price')">{{sortPrice}}</button>
+      <button class="sortButton" id="button" ng-click="sort('release')">{{sortDate}}</button>
+      <button class="sortButton" id="button" ng-click="resset('item_name')">Resset</button>
+    </article>
+  
+    <article>
+      <div class="games">
+        <div ng-repeat="game in productsData | filter : {category:'game'} | filter : filterInput | orderBy : keyName : reverse" class="row row-cols-1 row-cols-md-4 g-4">
+          <class="col">
+          <div class="card h-100">
+            <img src="../img/games/{{game.img_prod}}" class="card-img-top" alt="{{game.item_name}}">
+            <div class="card-body">
+              <h5 class="card-title">{{game.item_name}}</h5>
+              <p class="card-price">{{game.price | currency}}</p>
+              <p class="card-release">{{game.release}}</p>
+            </div>
+            <button class="addButton" ng-click="buyItem(game.id)">Add to Cart</button>
+          </div>
+        </div>
+      </div>
+    </article>
+  </section>
+  
+  <style>
+  .sortButton{
+    width: 100px;
+  }
+  
+  .games{
+    padding-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 7%;
+    padding-right: 7%;
+    column-gap: 2.5%;
+    row-gap: 5vh;
+  }
+  
+  .card-img-top{
+    width: 150px;
+    height: 200px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+  }
+  
+  .card {
+    display: flex;
+    align-items: center;
+    background-color: antiquewhite;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: 300px;
+    margin: auto;
+    text-align: center;
+    font-family: arial;
+  }
+  
+  .price {
+    color: grey;
+    font-size: 22px;
+  }
+  
+  .card button {
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+  }
+  
+  .card button:hover {
+    opacity: 0.7;
+  }
+  </style>
