--- a/template/home.html
+++ b/template/home.html
@@ -7,27 +7,21 @@
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-                <img src="../media/img/book1.jpg" class="w-100 d-block" alt="First slide">
+                <img src="../img/book2.jpg" class="w-100 d-block" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Books section</h5>
-                    <p>We can have some book img</p>
-                    <p>Later we can put the opacity to the full img</p>
+                    <h5>BOOKS</h5>
                 </div>        
             </div>
             <div class="carousel-item">
-                <img src="../media/img/book2.jpg" class="w-100 d-block" alt="Second slide">
+                <img src="../img/film-home.jpg" class="w-100 d-block" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Films section</h5>
-                    <p>We can have some films img</p>
-                    <p>Later we can put the opacity to the full img</p>
+                    <h5>MOVIES</h5>
                 </div> 
             </div>
             <div class="carousel-item">
-                <img src="../media/img/book3.jpg" class="w-100 d-block" alt="Third slide">
+                <img src="../img/game-home.jpg" class="w-100 d-block" alt="Third slide">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Games section</h5>
-                    <p>We can have some games img</p>
-                    <p>Later we can put the opacity to the full img</p>
+                    <h5>GAMES</h5>
                 </div> 
             </div>
         </div>
@@ -43,10 +37,6 @@
     <div class="container">
         <span class="row-title">
             Best books
-
-            <!-- <a class="btn btn-dark" role="button" href="#!book">See More
-              <i class="fa-solid fa-plus"></i>
-            </a> -->
         </span>
         <div class="row row-cols-1 row-cols-md-4" >
             <div class="col" ng-repeat="book in bestBooks">
@@ -56,8 +46,6 @@
                   <h5 class="card-title">{{book.item_name}}</h5>
                   <p class="card-text">{{book.price | currency}}</p>
                   <span>
-
-
                     <a class="btn btn-light" role="button" ng-click="buyItem(book.id)">Add to cart
                       <i class="fa-solid fa-cart-arrow-down"></i>
                     </a>
@@ -90,7 +78,7 @@
     </div>
     <div class="container">
         <span class="row-title">
-            Best Films
+            Best Movies
         </span>
         <div class="row row-cols-1 row-cols-md-4" >
           <div class="col" ng-repeat="movie in bestMovies">
@@ -115,9 +103,15 @@
 
 
 <style>
+    html{
+      scroll-behavior: smooth;
+    }
     .row-title{
       display: flex;
       justify-content: space-between;
+      font-size: 30px;
+      text-transform: uppercase;
+      color: #10002B;
     }
     .carousel-item{
         height: 60vh;
@@ -125,14 +119,12 @@
     .carousel-item img {
       height: 100%;
     }
-    .carousel-caption{
-      background-color: rgba(11, 11, 11, 0.6);
+    .carousel-caption h5{
+      color: #C9CFCF;
+      font-size: 25px;
     }
-    .row-title{
-        font-size: 30px;
-        text-transform: uppercase;
-        color: #10002B;
-    }
+
+
     .card span{
       display: flex;
       justify-content: center;
