--- a/template/game.html
+++ b/template/game.html
@@ -9,7 +9,7 @@
         <button class="sortButton" ng-click="sort('item_name')">{{sortName}}</button>
         <button class="sortButton" ng-click="sort('price')">{{sortPrice}}</button>
         <button class="sortButton" ng-click="sort('release')">{{sortDate}}</button>
-        <button class="sortButton" ng-click="resset('item_name')">Reset</button>
+        <button class="sortButton" ng-click="reset('item_name')">Reset</button>
     </article>
 
         <div class="row row-cols-1 row-cols-md-4" >
