--- a/template/digitalwallet.html
+++ b/template/digitalwallet.html
@@ -1,1 +1,86 @@
-<h1>Digital Wallet</h1>
+<div style="padding: 5%;">
+    <h1>Digital Wallet</h1>
+    <div class="accordion" id="accordionExample" style="padding: 3% 5% 5% 5%;">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              Books
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+                <table class="table">
+                    <thead>
+                      <tr>
+                        <th scope="col">Name of the book</th>
+                        <th scope="col">Status</th>
+                        <th scope="col">Key</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr ng-repeat="book in walletBook">
+                        <td>{{book.toObj().pName}}</td>
+                        <td>{{book.toObj().status}}</td>
+                        <td>{{book.toObj().key}}</td>
+                      </tr>
+                    </tbody>
+                  </table>            
+                </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                Games
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+                <table class="table">
+                    <thead>
+                      <tr>
+                        <th scope="col">Name of the game</th>
+                        <th scope="col">Status</th>
+                        <th scope="col">Key</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="game in walletGame">
+                          <td>{{game.toObj().pName}}</td>
+                          <td>{{game.toObj().status}}</td>
+                          <td>{{game.toObj().key}}</td>
+                        </tr>
+                    </tbody>
+                  </table>                   
+                </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                Movies
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+                <table class="table">
+                    <thead>
+                      <tr>
+                        <th scope="col">Name of the book</th>
+                        <th scope="col">Status</th>
+                        <th scope="col">Key</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="movie in walletMovie">
+                          <td>{{movie.toObj().pName}}</td>
+                          <td>{{movie.toObj().status}}</td>
+                          <td>{{movie.toObj().key}}</td>
+                        </tr>
+                    </tbody>
+                  </table>       
+            </div>
+          </div>
+        </div>
+      </div>
+</div>
