--- a/template/login.html
+++ b/template/login.html
@@ -1,4 +1,4 @@
-<section style="display: flex; justify-content: center; height: 600px;">
+<section style="display: flex; justify-content: center; height: 600px; padding: 5%;">
     <article style="width: 30%; display: flex; flex-direction: column; row-gap: 3vh;">
         <h1>LOGIN</h1>  
         <form style="display: flex; flex-direction: column; row-gap: 2vh;">
