--- a/template/shopcart.html
+++ b/template/shopcart.html
@@ -1,56 +1,62 @@
-<h1>SHOP CART</h1>
+<div style="border: 1px solid; display: flex; flex-direction: column; justify-content: center; padding: 5%;">
+    <h1>SHOP CART</h1>
 
-<div class="col-10 table-responsive">
-    <table class="table table-striped
-    table-hover	
-    table-borderless
-    table-secondary
-    align-middle">
-        <thead class="table-dark">
-            <tr>
-                <th>Product</th>
-                <th>Name</th>
-                <th>Type</th>
-                <th>Category</th>
-                <th>Price</th>
-                <th>Amount</th>
-                <th>Total</th>
-                <th>Option</th>
-            </tr>
-            </thead>
-            <tbody class="table-group-divider">
-                <tr class="table-light" ng-repeat="(idx, item) in cartArray">
-                    <td scope="row">{{idx+1}}</td>
-                    <td>{{item.item_name}}</td>
-                    <td class="checkOpt">
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" name="dhysical" value="physical">
-                            <label class="form-check-label" for="Physical">Physical</label>
-                          </div>
-                          <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="checkbox" name="digital" value="digital">
-                            <label class="form-check-label" for="digital">Digital</label>
-                        </div>
-                    </td>
-                    <td class="cat">{{item.category}}</td>
-                    <td>{{item.price | currency}}</td>
-                    <td>{{item.amount}}</td>
-                    <td>
-                        {{item.price * item.amount | currency}}
-                    </td>
-                    <td>
-                        <button type="button" class="btn btn-secondary" ng-click="delItem(item.id)">Remove</button>
-                    </td>
-                </tr>
-            </tbody>
-            <tfoot>
+    <div class="col-10 table-responsive">
+        <table class="table table-striped
+        table-hover	
+        table-borderless
+        table-secondary
+        align-middle">
+            <thead class="table-dark">
                 <tr>
-                    <td class="totalTd" colspan="8">
-                        Total: {{calTotal() | currency}}
-                    </td>
+                    <th>Product</th>
+                    <th>Name</th>
+                    <th>Type</th>
+                    <th>Category</th>
+                    <th>Price</th>
+                    <th>Amount</th>
+                    <th>Total</th>
+                    <th>Option</th>
                 </tr>
-            </tfoot>
-    </table>
+                </thead>
+                <tbody class="table-group-divider">
+                    <tr class="table-light" ng-repeat="(idx, item) in cartArray">
+                        <td scope="row">{{idx+1}}</td>
+                        <td>{{item.item_name}}</td>
+                        <td class="checkOpt">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" name="physical" value="physical">
+                                <label class="form-check-label" for="Physical">Physical</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" name="digital" value="digital" ng-model="isDigital"
+                                ng-change="onCgDigital({{item.id}})">
+                                <label class="form-check-label" for="digital">Digital</label>
+                            </div>
+                        </td>
+                        <td class="cat">{{item.category}}</td>
+                        <td>{{item.price | currency}}</td>
+                        <td>{{item.amount}}</td>
+                        <td>
+                            {{item.price * item.amount | currency}}
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-secondary" ng-click="delItem(item.id)">Remove</button>
+                        </td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td class="totalTd" colspan="7">
+                            Total: {{calTotal() | currency}}
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-outline-success" ng-click="checkinShop()">Check-In</button>
+                        </td>
+                    </tr>
+                </tfoot>
+        </table>
+    </div>
 </div>
 
 <style>
